# compilatoare

./: .gitignore
another_LL_test/: CMakeLists.txt  code.c  code.rs  example.c  expression_generator.py  grammar.txt  main.cpp
another_LL_test/backend/classes/: AlmostOptimizer.h  Generator.h  LLVMGenerator.h
another_LL_test/backend/implementations/: AlmostOptimizer.cpp  Generator.cpp  LLVMGenerator.cpp
another_LL_test/backend/instructions/classes/: Instruction.h
another_LL_test/backend/instructions/implementations/: Instruction.cpp
another_LL_test/classes/: ExprBinary.h  ExprCall.h  ExprLiteral.h  ExprStmt.h  ExprVar.h  Expression.h  Lexer.h  Parser.h  Statement.h  Token.h  VarStmt.h
another_LL_test/flex/: common_flex.h  flex_lexer.h  lex.yy.cc  lexer.lex
another_LL_test/frontend/classes/: Lexer.h  Parser.h  Token.h
another_LL_test/frontend/classes/expressions/: ExprBinary.h  ExprCall.h  ExprLiteral.h  ExprUnary.h  ExprVar.h  Expression.h
another_LL_test/frontend/classes/statements/: ExprStmt.h  FunDecl.h  ReturnStmt.h  VarStmt.h
another_LL_test/frontend/flex_dir/: common_flex.h  lexer.lex
another_LL_test/frontend/implementations/: Parser.cpp  Token.cpp
another_LL_test/frontend/implementations/expressions/: ExprBinary.cpp  ExprCall.cpp  ExprLiteral.cpp  ExprUnary.cpp  ExprVar.cpp
another_LL_test/frontend/implementations/statements/: ExprStmt.cpp  FunDecl.cpp  ReturnStmt.cpp  Statement.cpp  VarStmt.cpp
another_LL_test/implementations/: ExprBinary.cpp  ExprCall.cpp  ExprLiteral.cpp  ExprStmt.cpp  ExprUnary.cpp  ExprVar.cpp  Expression.cpp  Lexer.cpp  Parser.cpp  Statement.cpp  Token.cpp  VarStmt.cpp
c_parser/: common.h  my.l  parser  y.tab.h
cpp_LL1_parser/: grammar.txt  main.cpp
cpp_LL1_parser/classes/: Lexer.h
cpp_LL1_parser/implementations/: Lexer.cpp  Parser.cpp  bak.Parser.cpp
cpp_compiler/: CMakeLists.txt  main.cpp
cpp_compiler/classes/: Parser.h
cpp_compiler/implementations/: Lexer.cpp  Parser.cpp
curs2/: ex1.s  my.lex  parseint.lex
curs3/: Makefile  calc.lex  calc.tab.c  calc.y  ex1.s
cursuri/curs2/: ex1.c  my.lex  run.sh
cursuri/curs3/: calc  calc.tab.c  calc.tab.h  calc.y  calc.yy.c  ex1.c  ex1.s
cursuri/curs4/: calculator.cpp
cursuri/curs5/: asm-arm1.tgz  llvm-example-gen.tgz
cursuri/curs5/part1-hand-assembly/: main.c  testf.c  testf.s
cursuri/curs5/part2-llvm/: Makefile  example.sh  generate-sum  generate-sum.cpp  sum.ll  sum.s  test  test-sum  test-sum-gcc  test2  testcompiler.result  testfunc.c  testmain.c
my_lang/: Makefile  bak2.calc.y  calc  calc.lex  calc.tab.c  calc.tab.h  calc.y  calc.yy.c  compiler.y  ex1.c  ex1.s  interactive.y  lex.yy.c  lexer.lex  my_program.txt
test_c_lexer/: ex1.c  foreach.h  my.l  my.lex.old
test_c_lexer/c_parser/: calc.l  enum_gen.h  ex1.c  lex.yy.c  my.y  parser  run.sh  y.tab.c
test_calc/: calc  calc.tab.c  lex.yy.c
testing/: scp.sh  ssh.sh
testing/c_parser/: lex.yy.c  my.y  y.tab.c
testing/test_c_lexer/: run.sh
testing/test_calc/: calc.output  calc.tab.h  calc.y  common.h  y.tab.c  y.tab.h
testing/test_risc_gcc/: main  main.c
